--- a/faq-ui/src/i18n/messages.xlf
+++ b/faq-ui/src/i18n/messages.xlf
@@ -85,7 +85,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/header/header.component.html</context>
-          <context context-type="linenumber">15</context>
+          <context context-type="linenumber">14</context>
         </context-group>
       </trans-unit>
       <trans-unit id="appTitle" datatype="html">
@@ -106,14 +106,14 @@
         <source>Home</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/header/header.component.html</context>
-          <context context-type="linenumber">12</context>
+          <context context-type="linenumber">11</context>
         </context-group>
       </trans-unit>
       <trans-unit id="newFaq" datatype="html">
         <source>New FAQ</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/header/header.component.html</context>
-          <context context-type="linenumber">25</context>
+          <context context-type="linenumber">24</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
@@ -124,7 +124,7 @@
         <source>Logout</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/header/header.component.html</context>
-          <context context-type="linenumber">27</context>
+          <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
       <trans-unit id="previous" datatype="html">
@@ -141,11 +141,18 @@
           <context context-type="linenumber">15</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="pageNotFound" datatype="html">
+        <source>Page not found.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/page-description/page-description.component.html</context>
+          <context context-type="linenumber">3</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="showing" datatype="html">
         <source>{VAR_PLURAL, plural, =0 {Nothing found.} =1 {One entry found.} other {Showing entries <x id="INTERPOLATION" equiv-text="{{getFromElement()}}"/>-<x id="INTERPOLATION_1" equiv-text="{{getToElement()}}"/> of <x id="INTERPOLATION_2" equiv-text="{{getTotalElements()}}"/>.} }</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/page-description/page-description.component.html</context>
-          <context context-type="linenumber">3</context>
+          <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
       <trans-unit id="close" datatype="html">
@@ -184,7 +191,7 @@
         <source>Question</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">10</context>
+          <context context-type="linenumber">12</context>
         </context-group>
       </trans-unit>
       <trans-unit id="questionRequired" datatype="html">
@@ -192,7 +199,7 @@
             </source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">15</context>
+          <context context-type="linenumber">17</context>
         </context-group>
       </trans-unit>
       <trans-unit id="questionMaxLength" datatype="html">
@@ -202,14 +209,14 @@
             </source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">17</context>
+          <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
       <trans-unit id="answer" datatype="html">
         <source>Answer</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">25</context>
+          <context context-type="linenumber">27</context>
         </context-group>
       </trans-unit>
       <trans-unit id="answerRequired" datatype="html">
@@ -217,7 +224,7 @@
             </source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">30</context>
+          <context context-type="linenumber">32</context>
         </context-group>
       </trans-unit>
       <trans-unit id="answerMaxLength" datatype="html">
@@ -226,60 +233,60 @@
             </source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">32</context>
+          <context context-type="linenumber">34</context>
         </context-group>
       </trans-unit>
       <trans-unit id="tags" datatype="html">
         <source>Tags</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">39</context>
+          <context context-type="linenumber">41</context>
         </context-group>
       </trans-unit>
       <trans-unit id="newTag" datatype="html">
         <source>New tag</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">43</context>
+          <context context-type="linenumber">45</context>
         </context-group>
       </trans-unit>
       <trans-unit id="add" datatype="html">
         <source>Add</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">46</context>
+          <context context-type="linenumber">48</context>
         </context-group>
       </trans-unit>
       <trans-unit id="delete" datatype="html">
         <source>Delete</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">52</context>
+          <context context-type="linenumber">54</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">71</context>
+          <context context-type="linenumber">72</context>
         </context-group>
       </trans-unit>
       <trans-unit id="reset" datatype="html">
         <source>Reset</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">62</context>
+          <context context-type="linenumber">64</context>
         </context-group>
       </trans-unit>
       <trans-unit id="create" datatype="html">
         <source>Create</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">66</context>
+          <context context-type="linenumber">68</context>
         </context-group>
       </trans-unit>
       <trans-unit id="save" datatype="html">
         <source>Save</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/faq-editor/faq-editor.component.html</context>
-          <context context-type="linenumber">67</context>
+          <context context-type="linenumber">69</context>
         </context-group>
       </trans-unit>
       <trans-unit id="confirmationRequired" datatype="html">
