--- a/faq-api/src/main/resources/messages.properties
+++ b/faq-api/src/main/resources/messages.properties
@@ -1,6 +1,9 @@
+faq.question.notEmpty=Question must be informed.
 faq.question.size=Question must be between {min} and {max} characters.
+faq.answer.notEmpty=Answer must be informed.
 faq.answer.size=Answer must be between {min} and {max} characters.
+tag.name.notEmpty=Tag must be informed.
 tag.name.size=Tag name must be between {min} and {max} characters.
 error.faq.notUnique=This question has already been recorded (id={0}).
 error.notFound=Entry not found (id={0}).
-error.validation=Please check your input, there were errors.\n{0}
+error.validation=Please check your input, there were errors.
