--- a/faq-api/src/main/resources/messages.properties
+++ b/faq-api/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
-faq.question.notEmpty=Question must be informed.
+faq.question.notBlank=Question must be informed.
 faq.question.size=Question must be between {min} and {max} characters.
-faq.answer.notEmpty=Answer must be informed.
+faq.answer.notBlank=Answer must be informed.
 faq.answer.size=Answer must be between {min} and {max} characters.
-tag.name.notEmpty=Tag must be informed.
+tag.name.notBlank=Tag must be informed.
 tag.name.size=Tag name must be between {min} and {max} characters.
 error.faq.notUnique=This question has already been recorded (id={0}).
 error.notFound=Entry not found (id={0}).
