--- a/faq-api/src/main/resources/messages_fr.properties
+++ b/faq-api/src/main/resources/messages_fr.properties
@@ -1,8 +1,8 @@
-faq.question.notEmpty=La question doit être informée.
+faq.question.notBlank=La question doit être informée.
 faq.question.size=La question doit contenir entre {min} et {max} caractères.
-faq.answer.notEmpty=La réponse doit être informée.
+faq.answer.notBlank=La réponse doit être informée.
 faq.answer.size=La réponse doit contenir entre {min} et {max} caractères.
-tag.name.notEmpty=L'étiquettage doit être informé.
+tag.name.notBlank=L'étiquettage doit être informé.
 tag.name.size=L'étiquettage doit contenir entre {min} et {max} caractères.
 error.faq.notUnique=Cette question existe déjà (id={0}).
 error.notFound=L''entrée recherchée n''existe pas (id={0}).
